syntax = "proto3";

package microservice.registrations.model;

option go_package = "distributor/grpc/pb";
 
message ResponseDefault {
	string error   = 1;
	string message = 2;
}

 