syntax = "proto3";

package microservice.registrations.registrations_person;

import "registrations_model.proto";

option go_package = "grpc-caller/grpc/pb";

message CreateFidelity {
    int64 indicator_id = 1;
    bool want_retry = 2;
}

service PersonRPC{
    rpc CreateFidelityRegister (CreateFidelity) returns ( model.ResponseDefault) {};
}
